# 3D-Voxel-Shooter

./: CMakeLists.txt  main.cpp
data/shaders/: berry.frag  berry.geom  berry.vert  berry_fr.glsl  berry_ge.glsl  berry_ve.glsl  chunk.frag  chunk_geometry.glsl  chunk_vertex.glsl  imp_terrain.frag  imp_terrain.vert  improved_Water.frag  improved_Water.vert  line.vert  player.vert  player_fragment.glsl  player_vertex.glsl  projectile.frag  projectile.geom  projectile.vert  terrain_fragment.glsl  terrain_geometry.glsl  terrain_vertex.glsl  text.vert  text_fragment.glsl  water.frag  water.vert  water_fragment.glsl  water_vertex.glsl
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/Engine/: Camera.cpp  Camera.h  CollisionChunks.cpp  CollisionChunks.h  CuberRenderer.cpp  CuberRenderer.h  Player.cpp  Player.h  RenderManager.cpp  RenderManager.h  Renderable.cpp  Renderable.h  ShaderLoader.cpp  ShaderLoader.h  WindowManager.cpp  WindowManager.h  WorldWater.cpp  WorldWater.h
src/Engine/GUI/: GuiManager.cpp
src/Engine/Generators/: Cube.cpp  Cube.h  TerrainGenerator.cpp  TerrainGenerator.h
src/Engine/Manager/: ChunkManager.cpp  ChunkManager.h  SoundManager.cpp  SoundManager.h
src/Engine/Meshing/: SimpleMesher.cpp  SimpleMesher.h
src/Engine/SpawnableObjects/: Ammo.cpp  Ammo.h  Bullet.cpp  Bullet.h  Chunk.cpp  Chunk.h  Food.cpp  Food.h  Fountain.cpp  Fountain.h  Hitbox.cpp  Hitbox.h  MeshedChunk.cpp  MeshedChunk.h  Projectile.cpp  Projectile.h  ProjectileGenerator.cpp  ProjectileGenerator.h  Shields.cpp  Shields.h  SimpleCube.cpp  SimpleCube.h  Skybox.cpp  Skybox.h  Sun.cpp  Sun.h  Terrain.cpp  Terrain.h  Water.cpp  Water.h  WorldWater.cpp  WorldWater.h
src/Engine/SpawnableObjects/Terrain/: ImprovedPlants.cpp  ImprovedPlants.h  ImprovedTerrain.cpp  ImprovedTerrain.h  ImprovedWater.cpp  (+1 more)
src/Engine/StateMachine/: Essential.cpp  Essential.h  SimpleTimer.cpp  SimpleTimer.h  State.cpp  State.h  Statemachine.cpp  Statemachine.h  StopWatch.cpp  StopWatch.h  Timer.cpp  Timer.h
src/Engine/Text/: FontLoader.cpp  FontLoader.h  TextBox.cpp  TextBox.h  TextRenderer.cpp  TextRenderer.h
src/Engine/TextStuff/: Font.cpp  Font.h  GuiTest.cpp  GuiTest.h  SimpleText.cpp  SimpleText.h
src/GUI/: Button.cpp  Button.h  GuiManager.h
src/Gameplay/: Enemy.cpp  Enemy.h  EnemyManger.cpp  EnemyManger.h  Platform.cpp  Platform.h
src/States/: Game.cpp  Game.h  GameOver.cpp  GameOver.h  Menu.cpp  Menu.h  RunningGame.cpp  RunningGame.h
